2003-12-15  Jakub Steiner <jimmac@ximian.com>

	* 48x48/apps/gnome-panel.png
	* 48x48/apps/gnome-session.png
	* 48x48/apps/gnome-window-manager.png
	* 48x48/apps/Makefile.am: control center icons

2003-12-15  Jakub Steiner <jimmac@ximian.com>

	* configure.in
	* 16x16/stock/Makefile.am: don't install flags, they are not
	  politically acceptable globally

2003-12-15  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/net/Makefile.am
	* 16x16/stock/net/stock_mail-forward.png
	* 16x16/stock/net/stock_mail-open.png
	* 16x16/stock/net/stock_mail-receive.png
	* 16x16/stock/net/stock_mail-reply.png
	* 16x16/stock/net/stock_mail-send.png
	* 24x24/stock/net/Makefile.am
	* 24x24/stock/net/stock_mail-forward.png
	* 24x24/stock/net/stock_mail-open.png
	* 24x24/stock/net/stock_mail-receive.png
	* 24x24/stock/net/stock_mail-reply.png
	* 24x24/stock/net/stock_mail-send.png
	* 32x32/stock/net/Makefile.am
	* 32x32/stock/net/stock_mail-open.png
	* 48x48/stock/net/Makefile.am
	* 48x48/stock/net/stock_mail-open.png: added

	* 16x16/stock/net/stock_insert-url.png
	* 16x16/stock/net/stock_insert_url.png
	* 16x16/stock/net/stock_mail_forward.png
	* 16x16/stock/net/stock_mail_open.png
	* 16x16/stock/net/stock_mail_receive.png
	* 16x16/stock/net/stock_mail_reply.png
	* 16x16/stock/net/stock_mail_send.png
	* 24x24/stock/net/stock_insert-url.png
	* 24x24/stock/net/stock_insert_url.png
	* 24x24/stock/net/stock_mail_forward.png
	* 24x24/stock/net/stock_mail_open.png
	* 24x24/stock/net/stock_mail_receive.png
	* 24x24/stock/net/stock_mail_reply.png
	* 24x24/stock/net/stock_mail_send.png
	* 32x32/stock/net/stock_mail_open.png
	* 48x48/stock/net/stock_mail_open.png: removed. This fixes naming
	  naming inconsistency as described in #129294

2003-12-14  Jakub Steiner <jimmac@ximian.com>

	* 32x32/apps/gnome-calculator.png
	* 32x32/apps/Makefile.am
	* 48x48/apps/gnome-calculator.png
	* 48x48/apps/Makefile.am: add calculator icon (fixes #129282)

2003-12-12  Jakub Steiner <jimmac@ximian.com>
