@@ -1,5 +1,15 @@
 2003-12-15  Jakub Steiner <jimmac@ximian.com>
 
+	* 24x24/stock/generic/stock_calendar-view-day.png
+	* 24x24/stock/generic/stock_calendar-view-list.png
+	* 24x24/stock/generic/stock_calendar-view-month.png
+	* 24x24/stock/generic/stock_calendar-view-week.png
+	* 24x24/stock/generic/stock_calendar-view-work-week.png
+	* 24x24/stock/generic/stock_calendar-view-year.png
+	* 24x24/stock/generic/Makefile.am: move Evolution calendar icons in
+
+2003-12-15  Jakub Steiner <jimmac@ximian.com>
+
 	* 48x48/apps/gnome-panel.png
 	* 48x48/apps/gnome-session.png
 	* 48x48/apps/gnome-window-manager.png
